--- a/Code/Ch02/Listing_2_27/Listing_2_27.vcxproj
+++ b/Code/Ch02/Listing_2_27/Listing_2_27.vcxproj
@@ -13,10 +13,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{7A2F8462-529E-4AB7-8DE8-FEB06BF83714}</ProjectGuid>
-    <SccProjectName>SAK</SccProjectName>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName></SccProjectName>
+    <SccAuxPath></SccAuxPath>
+    <SccLocalPath></SccLocalPath>
+    <SccProvider></SccProvider>
     <TargetFrameworkVersion>
     </TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
